--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -1,13 +1,31 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dev2048.app.newapp.fragment.IndexFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <xiao.free.refreshlayoutlib.SwipeRefreshLayout
+        android:id="@+id/index_swipe_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <include
+            android:id="@id/swipe_refresh_header"
+            layout="@layout/layout_classic_header" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/index_recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+
+        <include
+            android:id="@id/swipe_load_more_footer"
+            layout="@layout/layout_classic_footer" />
+
+    </xiao.free.refreshlayoutlib.SwipeRefreshLayout>
+
+
+
+
+</RelativeLayout>
