--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -1,17 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+   xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dev2048.app.newapp.fragment.IndexFragment">
-    <xiao.free.refreshlayoutlib.SwipeRefreshLayout
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/index_swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            android:id="@id/swipe_refresh_header"
-            layout="@layout/layout_classic_header" />
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/index_recycle_view"
@@ -19,11 +16,9 @@
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
 
-        <include
-            android:id="@id/swipe_load_more_footer"
-            layout="@layout/layout_classic_footer" />
 
-    </xiao.free.refreshlayoutlib.SwipeRefreshLayout>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 
